<resources>
    <string name="app_name">拇指考勤</string>
    <string name="confirm">确定</string>
    <string name="ip_settings">IP设置</string>
    <string name="hint_pwd">请输入密码</string>
    <string name="hint_account">请输入教工号/手机号</string>
    <string name="login">登录</string>
    <string name="ip_address">IP地址</string>
    <string name="port">端口号</string>

    <string name="invalid_ip">IP地址需在0~255之间</string>
    <string name="invalid_port">端口号范围需在1~65535之间</string>
    <string name="title_activity_home">考勤</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="remain_to_be_seen">敬请期待...</string>
    <string name="logout">退出登录</string>
    <string name="no_course">当前没有课程</string>
    <string name="try_refreshing">重新加载</string>
    <string name="logout_failed">网络异常，登出失败</string>
    <string name="use_offline_mode">启用离线模式</string>
    <string name="connect_failed">连接服务器失败</string>
    <string name="no_user_check">当前用户不存在，请联系系统管理员核实情况</string>
    <string name="user_status_invalid">当前用户状态异常，建议重新登录</string>
    <string name="name_loading">姓名加载中...</string>
    <string name="profession_loading">专业加载中...</string>
    <string name="course_no_student">当前课程没有学生</string>
    <string name="course_detail">课程详情</string>
    <string name="kaoqin_sum">考勤统计</string>
    <string name="lack_of_account_pwd">请输入完整的账号和密码</string>
    <string name="back_to_desktop">再按一次返回键回到桌面</string>
    <string name="wether_to_logout">是否确定退出登录</string>
    <string name="not_sure">不确定</string>
    <string name="invalid_account_pwd">用户名或密码错误</string>
</resources>
