<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--android:checkableBehavior="single"-->
    <group>
        <item
            android:id="@+id/nav_ip_settings"
            android:icon="@drawable/ic_net"
            android:title="@string/ip_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_shutdown"
            android:title="@string/logout" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_waiting"
            android:title="@string/remain_to_be_seen" />
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_exit"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Exit" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
